v4.11 ??? ??? 2010

v4.10.5 16th July 2010
  - A bug fix release for Python v3 and Python v2.7.

v4.10.4 15th July 2010
  - Use capsules when being built for Python v2.7 to work around an apparent
    bug in the support for PyCObject.

v4.10.3 12th July 2010
  - Added support for Q_SLOT, Q_SLOTS, Q_SIGNAL and Q_SIGNALS.
  - Added the /__len__/ function annotation.

v4.10.2 16th April 2010
  - A bug fix release.

v4.10.1 17th March 2010
  - Added the /NoCopy/ function and argument annotations.

v4.10 14th January 2010
  - Added the sip.voidptr.ascapsule() method.
  - Added the -P command line option to build modules with "protected"
    redefined to "public" if supported by the platform.  This can result in
    significantly smaller modules.
  - Added the -o command line option to automatically generate docstrings.
  - Added the -k command line option and /KeywordArgs/ and /NoKeywordArgs/
    function annotations to support keyword arguments.
  - Added the /Default/ exception annotation.
  - Added the /DocType/ argument, function, mapped type and variable
    annotation.
  - Added the /DocValue/ argument annotation.
  - Added the %Docstring directive to specify explicit docstrings for classes,
    functions and methods.
  - Added sipError to %MethodCode to allow user errors to be distinguished from
    interpreter errors.
  - Added sipBadCallableArg() to the C API.
  - Added support for configuring and building outside of the source tree.

v4.9.3 23rd November 2009
  - A bug fix release.

v4.9.2 20th November 2009
  - A bug fix release.

v4.9.1 23rd October 2009
  - A bug fix release.

v4.9 26th September 2009
  - Added support for __iter__ and __next__.  (__next__ is used for Python v2
    as well as v3.)
  - Added the %API directive.
  - Added the /API/ annotation.
  - Added sipIsAPIEnabled() to the C API.
  - Added sip.getapi() and sip.setapi() to the Python API.
  - Added sip.ispyowned() to the Python API.